Fixing issue on Chrome where the mobile menu is visibile on loading

--- a/css/main.css
+++ b/css/main.css
@@ -592,10 +592,12 @@ section.contacts .form-container footer .form-btn {
         text-align: center;
         box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.1);
         transform: translateX(-100%);
-        transition: transform 0.3s ease-in;
+        opacity: 0;
+        transition: transform 0.45s ease-in, opacity 0.3s ease-in;
     }
 
     .hero .navbar-container.open .main-nav {
+        opacity: 1;
         transform: translateX(0%);
     }
 
